Prevent block slot buttons from wrapping

--- a/app/assets/stylesheets/forest/partials/_blocks.scss
+++ b/app/assets/stylesheets/forest/partials/_blocks.scss
@@ -25,3 +25,8 @@
 .block-slot-field-template {
   display: none;
 }
+
+.block-slot-field__buttons {
+  min-width: 74px;
+  text-align: right;
+}
